# aamva-rs

./: Cargo.toml  README.md
.github/workflows/: publish.yaml
bindings/aamva-js/: Cargo.toml
bindings/aamva-js/examples/: scanner.html
bindings/aamva-js/src/: lib.rs
bindings/aamva-web/: Cargo.toml  README.md
bindings/aamva-web/examples/: scanner.html
bindings/aamva-web/src/: lib.rs
src/: data.rs  lib.rs
tests/licenses/VA-V4/: VA-21.txt  VA-REAL-21.txt  VA-REAL-C-21.txt  VA-REAL-CHILD.txt  VA-REAL-U21.txt  VA-U21.txt
