[workspace]
members = [".", "bindings/aamva-js"]

[package]
name = "aamva"
version = "0.1.0"
edition = "2021"
authors = ["Syfaro <syfaro@huefox.com>"]
license = "MIT"

[profile.release]
strip = true
lto = true

[dependencies]
itertools = "0.13.0"
jiff = { version = "0.1.0", default-features = false, features = ["std", "serde"] }
nom = "7.1.3"
num_enum = "0.7.2"
once_cell = "1.19.0"
phf = { version = "0.11.2", features = ["macros"] }
regex-lite = "0.1.5"
serde = { version = "1", features = ["derive"] }
tap = "1.0.1"
tracing = "0.1.40"

[dev-dependencies]
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
walkdir = "2.5.0"
