[workspace]
members = [".", "bindings/aamva-web"]

[workspace.metadata.release]
sign-tag = true
shared-version = true
tag-name = "v{{version}}"

[package]
name = "aamva"
version = "0.1.1"
edition = "2024"
authors = ["Syfaro <syfaro@huefox.com>"]
license = "MIT"
publish = false
repository = "https://github.com/Syfaro/aamva-rs"

[package.metadata.release]
shared-version = true

[features]
web = ["tsify", "wasm-bindgen"]

[dependencies]
itertools = "0.14.0"
jiff = { version = "0.2.23", default-features = false, features = ["std", "serde"] }
nom = "8.0.0"
num_enum = "0.7.5"
once_cell = "1.21.3"
phf = { version = "0.13.1", features = ["macros"] }
regex-lite = "0.1.9"
serde = { version = "1.0.228", features = ["derive"] }
tap = "1.0.1"
tracing = "0.1.44"
tsify = { version = "0.5.6", optional = true }
wasm-bindgen = { version = "0.2.114", optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
walkdir = "2.5.0"
