[package]
name = "aamva-web"
version = "0.1.1"
edition = "2024"
publish = false
repository = "https://github.com/Syfaro/aamva-rs"

[package.metadata.release]
shared-version = true

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O']

[dependencies]
aamva = { path = "../../", features = ["web"] }
serde-wasm-bindgen = "0.6.5"
tsify = { version = "0.5.6", features = ["js"] }
wasm-bindgen = "0.2.92"
